--- a/Frequentist Inference Case Study - Rajesh Ananthula/Frequentist Inference Case Study - Part B_Rajesh Ananthula.ipynb
+++ b/Frequentist Inference Case Study - Rajesh Ananthula/Frequentist Inference Case Study - Part B_Rajesh Ananthula.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,12 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import t\n",
     "from numpy.random import seed\n",
-    "medical = pd.read_csv('/Users/spidy/Downloads/Frequentist Case Study-2/insurance2.csv')"
+    "medical = pd.read_csv('/Users/spidy/Downloads/Frequentist Case Study/insurance2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,13 +248,12 @@
     "plt.title('Distribution of Charges')\n",
     "plt.xlabel('Charges')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +285,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To address the administrator's concern, we can use a one-sample t-test to determine if the mean charge is significantly less than 12,000. The t-test is appropriate here because we are comparing the sample mean (`mean_charges`) to a known value (12,000) and the population standard deviation is unknown. The Central Limit Theorem justifies the use of this test, as the sample size (n=1338) is sufficiently large for the sampling distribution of the mean to approximate a normal distribution."
+    "To address the administrator's concern, we can use a one-sample t-test to determine whether the mean charges in the sample are significantly different from the hypothesized population mean of 12,000. \n",
+    "\n",
+    "The justification for using this data is based on the assumption that the sample is representative of the population, and the Central Limit Theorem (CLT) ensures that the sampling distribution of the mean is approximately normal, given the sample size of 1338, which is sufficiently large.\n",
+    "\n",
+    "The one-sample t-test is appropriate here because:\n",
+    "1. The population standard deviation is unknown, and we are estimating it using the sample standard deviation.\n",
+    "2. We are testing whether the sample mean is significantly greater than or less than the hypothesized mean.\n",
+    "\n",
+    "The null hypothesis ($H_0$) is that the true mean charge is equal to 12,000 ($\\mu = 12,000$). The alternative hypothesis ($H_a$) is that the true mean charge is greater than 12,000 ($\\mu > 12,000$), as the administrator is concerned about the mean falling below this threshold. This makes it a one-tailed test."
    ]
   },
   {
@@ -305,53 +312,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sample size\n",
-    "n = len(medical)\n",
-    "\n",
-    "# Degrees of freedom\n",
-    "df = n - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Significance level for one-sided test\n",
-    "alpha = 0.05\n",
-    "\n",
-    "# Critical value from t-distribution\n",
-    "t_critical = t.ppf(1 - alpha, df)\n",
-    "\n",
-    "# Margin of error\n",
-    "margin_of_error = t_critical * (std_charges / np.sqrt(n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Critical value (t): 1.6459941145571317\n",
-      "Lower bound of the 95% one-sided confidence interval: 12725.48718381623\n"
+      "T-statistic: 3.837351719658534\n",
+      "P-value: 6.508582604643528e-05\n"
      ]
     }
    ],
    "source": [
-    "# One-sided confidence interval\n",
+    "# Hypothesized population mean\n",
+    "mu = 12000\n",
+    "\n",
+    "# Sample size\n",
+    "n = len(medical)\n",
+    "\n",
+    "# Calculate the t-statistic\n",
+    "t_statistic = (mean_charges - mu) / (std_charges / np.sqrt(n))\n",
+    "\n",
+    "# Calculate the p-value for a one-tailed test\n",
+    "p_value = t.sf(t_statistic, df=n-1)\n",
+    "\n",
+    "print(f\"T-statistic: {t_statistic}\")\n",
+    "print(f\"P-value: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Critical value (one-tailed): 1.6459941145571317\n",
+      "Lower bound of 95% confidence interval: 12725.48718381623\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the critical value for a one-tailed test at 95% confidence level\n",
+    "alpha = 0.05\n",
+    "critical_value = t.ppf(1 - alpha, df=n-1)\n",
+    "\n",
+    "# Calculate the lower bound of the one-sided confidence interval\n",
+    "margin_of_error = critical_value * (std_charges / np.sqrt(n))\n",
     "lower_bound = mean_charges - margin_of_error\n",
     "\n",
-    "print(f\"Critical value (t): {t_critical}\")\n",
-    "print(f\"Lower bound of the 95% one-sided confidence interval: {lower_bound}\")"
+    "print(f\"Critical value (one-tailed): {critical_value}\")\n",
+    "print(f\"Lower bound of 95% confidence interval: {lower_bound}\")"
    ]
   },
   {
@@ -380,24 +394,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * This section involves hypothesis testing to determine whether there is a significant difference \n",
-    " * in the charges for people with insurance compared to those without insurance. The test used is \n",
-    " * a two-sample t-test for the difference between means, assuming equal variances.\n",
-    " * \n",
-    " * Null Hypothesis (H0): There is no difference in the mean charges between people with insurance \n",
-    " * and those without insurance. Mathematically, H0: μ0 = μ1.\n",
-    " * \n",
-    " * Alternative Hypothesis (H1): There is a difference in the mean charges between people with \n",
-    " * insurance and those without insurance. Mathematically, H1: μ0 ≠ μ1.\n",
-    " * \n",
-    " * The pooled standard deviation (sp) is calculated using the formula:\n",
-    " * sp = sqrt(((n0 - 1) * s0^2 + (n1 - 1) * s1^2) / (n0 + n1 - 2))\n",
-    " * \n",
-    " * The t-test statistic is then computed as:\n",
-    " * t = (x̄0 - x̄1) / (sp * sqrt(1/n0 + 1/n1))\n",
-    " * \n",
-    " * Assumption:\n",
-    " * - The variances of the two groups (with insurance and without insurance) are assumed to be equal."
+    "__A:__\n",
+    "```markdown\n",
+    "The null hypothesis ($H_0$): There is no difference in the mean charges between people with insurance and those without insurance, i.e., $\\mu_0 = \\mu_1$.\n",
+    "\n",
+    "The alternative hypothesis ($H_a$): There is a difference in the mean charges between people with insurance and those without insurance, i.e., $\\mu_0 \\neq \\mu_1$.\n",
+    "\n",
+    "The assumption about the variances of the two groups is that they are equal. This assumption allows us to use the pooled standard deviation ($s_p$) in the calculation of the _t_-test statistic.\n",
+    "```"
    ]
   },
   {
@@ -416,77 +420,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import ttest_ind\n",
     "\n",
-    "# Separate charges for people with and without insurance\n",
-    "charges_with_insurance = medical[medical['insuranceclaim'] == 1]['charges']\n",
-    "charges_without_insurance = medical[medical['insuranceclaim'] == 0]['charges']\n"
+    "# Separate the charges for insured and uninsured groups\n",
+    "insured_charges = medical[medical['insuranceclaim'] == 1]['charges']\n",
+    "uninsured_charges = medical[medical['insuranceclaim'] == 0]['charges']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample sizes\n",
-    "n0 = len(charges_without_insurance)\n",
-    "n1 = len(charges_with_insurance)\n",
+    "n_insured = len(insured_charges)\n",
+    "n_uninsured = len(uninsured_charges)\n",
     "\n",
     "# Sample means\n",
-    "mean0 = charges_without_insurance.mean()\n",
-    "mean1 = charges_with_insurance.mean()"
+    "mean_insured = insured_charges.mean()\n",
+    "mean_uninsured = uninsured_charges.mean()\n",
+    "\n",
+    "# Sample standard deviations\n",
+    "std_insured = insured_charges.std()\n",
+    "std_uninsured = uninsured_charges.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample standard deviations\n",
-    "std0 = charges_without_insurance.std()\n",
-    "std1 = charges_with_insurance.std()\n",
+    "# Calculate the pooled standard deviation\n",
+    "s_p = np.sqrt(((n_insured - 1) * std_insured**2 + (n_uninsured - 1) * std_uninsured**2) / (n_insured + n_uninsured - 2))\n",
     "\n",
-    "# Pooled standard deviation\n",
-    "sp = np.sqrt(((n0 - 1) * std0**2 + (n1 - 1) * std1**2) / (n0 + n1 - 2))\n",
-    "\n",
-    "# Test statistic\n",
-    "t_statistic = (mean0 - mean1) / (sp * np.sqrt(1/n0 + 1/n1))\n",
+    "# Calculate the t-statistic manually\n",
+    "t_stat_manual = (mean_insured - mean_uninsured) / (s_p * np.sqrt(1/n_insured + 1/n_uninsured))\n",
     "\n",
     "# Degrees of freedom\n",
-    "df = n0 + n1 - 2"
+    "df = n_insured + n_uninsured - 2\n",
+    "\n",
+    "# Calculate the p-value manually (two-tailed test)\n",
+    "p_value_manual = 2 * t.sf(np.abs(t_stat_manual), df=df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Manual calculation - t-statistic: -11.893299030876715, p-value: 0.0\n",
-      "scipy.stats - t-statistic: -11.893299030876712, p-value: 4.461230231620717e-31\n"
+      "Manual t-statistic: 11.893299030876715\n",
+      "Manual p-value: 4.4612302316205886e-31\n",
+      "Scipy t-statistic: 11.893299030876712\n",
+      "Scipy p-value: 4.461230231620717e-31\n"
      ]
     }
    ],
    "source": [
-    "# Two-tailed p-value\n",
-    "p_value = 2 * (1 - t.cdf(abs(t_statistic), df))\n",
     "\n",
-    "print(f\"Manual calculation - t-statistic: {t_statistic}, p-value: {p_value}\")\n",
+    "print(f\"Manual t-statistic: {t_stat_manual}\")\n",
+    "print(f\"Manual p-value: {p_value_manual}\")\n",
     "\n",
-    "# Using scipy.stats\n",
+    "# Perform the t-test using scipy.stats\n",
+    "t_stat_scipy, p_value_scipy = ttest_ind(insured_charges, uninsured_charges, equal_var=True)\n",
     "\n",
-    "t_stat, p_val = ttest_ind(charges_without_insurance, charges_with_insurance, equal_var=True)\n",
-    "\n",
-    "print(f\"scipy.stats - t-statistic: {t_stat}, p-value: {p_val}\")"
+    "print(f\"Scipy t-statistic: {t_stat_scipy}\")\n",
+    "print(f\"Scipy p-value: {p_value_scipy}\")"
    ]
   },
   {
@@ -507,13 +515,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Documentation Comment:\n",
-    "# __Q6:__ \n",
-    "# Scipy's `scipy.stats` module does not provide a direct function for performing a *z*-test from a sample, unlike the _t_-test which is available through `scipy.stats.ttest_1samp` and related functions. \n",
-    "# The absence of a dedicated *z*-test function is likely because *z*-tests are less commonly used in practice compared to _t_-tests, as they require the population standard deviation to be known, which is often not the case in real-world scenarios. \n",
-    "# However, a *z*-test can still be implemented manually by calculating the z-score using the formula:\n",
-    "# z = (sample_mean - population_mean) / (population_std / sqrt(sample_size))\n",
-    "# and then using the standard normal distribution (e.g., `scipy.stats.norm`) to compute the p-value or critical values as needed."
+    "__A:__\n",
+    "\n",
+    "Documentation Comment:\n",
+    "* The `scipy.stats` module in SciPy provides a variety of statistical test functions, including the `_t_-test` for a sample. \n",
+    "* However, it does not include a direct implementation of a *z*-test for a sample. \n",
+    "* This is likely because *z*-tests are less commonly used in practice compared to _t_-tests, \n",
+    "as they require knowledge of the population standard deviation, which is often unknown. \n",
+    "* If a *z*-test is needed, it can be implemented manually using the formula for the *z*-statistic, \n",
+    "or external libraries such as `statsmodels` can be used, which provide support for *z*-tests.\n"
    ]
   },
   {
